--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     </div>
 </div> 
 
-
 <div class="container text-center">
-    <div class="card">
+    <div id="questionCard" class="card">
             <div class="row">
                 <div class="col">
                     <h3 id="question"></h3>
@@ -42,27 +41,39 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <p id="A"></p>
+                    <p id="A" button type="button" class="btn btn-outline-dark"></p>
                 </div>
                 <div class="col">
-                    <p id="B"></p>
+                    <p id="B" button type="button" class="btn btn-outline-dark">></p>
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col">
-                    <p id="C"></p>
+                    <p id="C" button type="button" class="btn btn-outline-dark"></p>
                 </div>
                 <div class="col">
-                    <p id="D"></p>
+                    <p id="D" button type="button" class="btn btn-outline-dark"></p>
                 </div>
             </div>
             <br>
         </div>
+    <div id="answerCard" class="card text-center">
+        <div class="row">
+            <h3 id="response" class="col"></h3>
+        </div>
+        <div class="row text-center">
+            <p><img id="responseImage" src=""></p>
+        </div>
+        <div class="row text-center">
+            <p id="correctResponse"></p>
+        </div>
+    </div>
 </div>
+
 <!--JavaScript link-->
 <script src="../TriviaGame/assets/javascript/app.js"></script>
-<!--Bootstrap JavaScript Links-->
+<!--Bootstrap JavaScript Links -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
